Use the css-class attribute and wrap icon and text in a span using flex and flex-wrap to fix the issue where it looks weird when multiple content apps are installed

--- a/src/Umbraco.Web.UI.Client/src/less/components/buttons/umb-button-ellipsis.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/buttons/umb-button-ellipsis.less
@@ -30,6 +30,11 @@
         }
     }
 
+    &__umb-button-ellipsis__content {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
     &__icon {
         color: inherit;
         flex-basis: 100%;
